--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
 	"name": "personal_website",
+	"homepage": "https://naviret.github.io/",
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
